force-app/main/default/objects/Dummy__mdt/Dummy__mdt.object-meta.xml
<CustomObject>
    <label>Dummy</label>
    <pluralLabel>Dummies</pluralLabel>
</CustomObject>