force-app/main/default/objects/Dummy__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>