force-app/main/default/objects/Dummy__mdt/fields/ReceptionId__c.field-meta.xml
<CustomField>
    <fullName>ReceptionId__c</fullName>
    <label>ReceptionId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>