force-app/main/default/objects/Dummy__mdt/fields/VehicleId__c.field-meta.xml
<CustomField>
    <fullName>VehicleId__c</fullName>
    <label>VehicleId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>